cmake_minimum_required(VERSION 3.27.9)
project(mysqlClient)
set(CMAKE_CXX_STANDARD 20)
#set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
set(SOURCE_LIB mysqlClient.cpp)
add_library(mysqlClient STATIC ${SOURCE_LIB})
target_include_directories(mysqlClient PUBLIC /usr/include/jdbc)
target_link_libraries(mysqlClient mysqlcppconn)
target_compile_features(mysqlClient PUBLIC cxx_std_20)
